# tomcrypt-rs

./: .gitmodules  Cargo.toml  README.md  README.tpl
src/: aead.rs  ecc.rs  error.rs  hash.rs  internal.rs  lib.rs  mac.rs  rand.rs  symmetric.rs  util.rs
tomcrypt-sys/: Cargo.toml  build.rs  genbindings.sh
tomcrypt-sys/src/: bindings.rs  lib.rs
